# MochiUI

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.cmd  build.ps1  build.ts  fetchdeps.ts  package.json  theme_config.json
.claude/: settings.local.json
.github/workflows/: build.yml
.zed/: settings.json
config/skia/: args_linux.gn  args_macos.gn  args_windows.gn
docs/: API.md  AUKDSL.md  Audio.md  BuildAndCI.md  CoreAPI.md  GettingStarted.md  GuiComponents.md  Introduction.md  JavaScriptAndReact.md  Layout.md  MikoUI.md  README.md  Resources.md  Theming.md
docs/mdx/: auk-dsl.mdx  index.mdx  javascript-react.mdx  mikoui.mdx
example/: app.rc  main.cpp
example/ActivityMonitor/: CMakeLists.txt  build.cmd  main.cpp
example/Borderless/: CMakeLists.txt  borderless.cpp
example/DSLDemo/: CMakeLists.txt  main.cpp  resource.xml
example/DSLDemo/ui/: container.yml  navbar.yml
example/Mixer/: CMakeLists.txt  mixer.cpp
example/ReactUI/: CMakeLists.txt  bundle.js  main.cpp
example/VueUI/: CMakeLists.txt  main.cpp  resource.xml
example/shared/resources/: resrouces.xml
framework/MikoUI/: CMakeLists.txt
framework/MikoUI/include/: MikoUI.hpp
include/: AUKApplication.hpp  AUKColor.hpp  AUKDSL.hpp  AUKDirectAudioEngine.hpp  AUKFontManager.hpp  AUKFoundation.hpp  AUKGraphicComponents.hpp  AUKGraphicInterface.hpp  AUKIWidget.hpp  AUKImage.hpp  AUKJavaScriptEngine.hpp  AUKJson.hpp  AUKPainter.hpp  AUKSvg.hpp  AureliaReact.hpp  MCKApplication.hpp  MCKDirectAudioEngine.hpp  MCKFontManager.hpp  MCKFoundation.hpp  MCKGraphicComponents.hpp  MCKGraphicInterface.hpp  MCKIWidget.hpp  SPHXApplication.hpp  SPHXColor.hpp  SPHXDirectAudioEngine.hpp  SPHXFontManager.hpp  SPHXFoundation.hpp  SPHXGraphicComponents.hpp  SPHXGraphicInterface.hpp  SPHXIWidget.hpp  SPHXImage.hpp  SPHXJavaScriptEngine.hpp  SPHXJson.hpp  SPHXPainter.hpp  SPHXSvg.hpp  SphereReact.hpp  SphereVUE.hpp
include/audio/: Streaming.hpp
include/core/: AnimationController.hpp  Application.hpp  FocusManager.hpp  IWindowHost.hpp  ResourceManager.hpp  ShortcutsManager.hpp  ThemeManager.hpp  Window.hpp
include/core/events/: EventKind.hpp  Events.hpp  FlexRootDispatch.hpp  KeyEvent.hpp  LayoutEvent.hpp  PointerEvent.hpp  SkiaEvent.hpp  TextEvent.hpp  WheelEvent.hpp  Win32Input.hpp  WindowEvent.hpp
include/dsl/: DslInherited.hpp  LibCssStyle.hpp
include/gui/: Components.hpp  GridLayout.hpp  Layout.hpp  MenuBar.hpp  MochiUI.h  OverlayNode.hpp  SkiaDraw.hpp  TaskDialog.hpp  Theme.hpp
include/gui/Components/: AccordionNode.hpp  BadgeNode.hpp  BreadcrumbsNode.hpp  ButtonNode.hpp  Calendar.hpp  CheckboxNode.hpp  ColorPicker.hpp  ComboBox.hpp  DatePicker.hpp  EmptyStateNode.hpp  FilePickerNode.hpp  GraphNode.hpp  GroupBox.hpp  HeatmapNode.hpp  IconNode.hpp  KnobNode.hpp  LegendNode.hpp  LinkNode.hpp  ModalNode.hpp  MultiSelectNode.hpp  NumberInput.hpp  Popover.hpp  ProgressBar.hpp  RadioButtonNode.hpp  RatingNode.hpp  ScrollAreaNode.hpp  SearchInputNode.hpp  SeparatorNode.hpp  SidebarNode.hpp  SkeletonNode.hpp  SliderNode.hpp  SpinnerNode.hpp  SplitterNode.hpp  StepIndicator.hpp  SwitchNode.hpp  Table.hpp  TabsNode.hpp  TagInputNode.hpp  TextInput.hpp  TextNode.hpp  (+6 more)
include/platform/windows/: Window.hpp
include/utils/FontManager/: FontMgr.hpp
include/utils/Misc/: ConfirmationDialog.hpp  FileDialog.hpp  ThemeSwitcher.hpp
modules/: package.json
modules/reactui/: App.tsx  README.md  index.ts  package.json  tsconfig.build.json
modules/reactui/examples/: App.tsx
modules/reactui/src/: index.ts
modules/reactui/src/core/: api.ts  mount.ts  reconciler.ts
modules/reactui/src/payload/: types.ts
modules/reactui/src/wrapper/: components.ts  stylesheet.ts
modules/vueui/: README.md  build-demo.ts  package.json  tsconfig.build.json
modules/vueui/example/: App.vue
modules/vueui/src/: index.ts
modules/vueui/src/core/: api.ts  renderer.ts
modules/vueui/src/payload/: types.ts
modules/vueui/src/wrapper/: components.ts
patch/: Skia.D3DPatch.patch
scripts/: env.ts  gen_resources.py  gen_resources.ts  gen_theme.py  submodules-init-sync.cmd  submodules-init-sync.ps1  submodules-init-sync.sh
src/: main.cpp
src/audio/: AUKDirectAudioEngine.cpp  MCKDirectAudioEngine.cpp  SPHXDirectAudioEngine.cpp  Streaming.cpp
src/core/: Application.cpp  AureliaWidget.cpp  MochiWidget.cpp  ResourceManager.cpp  SphereWidget.cpp
src/core/events/: EventKind.cpp
src/dsl/: DSL.cpp  LibCssStyle.cpp
src/gui/: AUKImage.cpp  AUKSvg.cpp  AureliaUI.cpp  Components.hpp  Layout.hpp  MenuBar.cpp  MenuBar.hpp  MochiUI.cpp  MochiUI.h  SPHXImage.cpp  SPHXSvg.cpp  SphereUI.cpp
src/gui/Components/: Calendar.cpp  CheckboxNode.cpp  ColorPicker.cpp  ComboBox.cpp  DatePicker.cpp  GroupBox.cpp  IconNode.cpp  KnobNode.cpp  NumberInput.cpp  Popover.cpp  RadioButtonNode.cpp  ScrollAreaNode.cpp  SliderNode.cpp  SwitchNode.cpp  Table.cpp  TextInput.cpp  TextNode.cpp  VUMeterNode.cpp
src/javascript/: JavaScriptEngine.cpp
src/platform/windows/: Window.cpp  WindowComposition.cpp
src/react/: AureliaReact.cpp  SphereReact.cpp
src/utils/FontManager/: FontMgr.cpp
src/utils/Misc/: ThemeSwitcher.cpp
src/vue/: SphereVUE.cpp
themes/: dark.json  light.json  md3dark.json  md3light.json  system.json  winuilight.json
website/spheredoc/: docusaurus.config.ts  package.json
website/spheredoc/docs/: intro.mdx
website/spheredoc/docs/api/: _category_.json  color.mdx  image.mdx  json.mdx  menubar.mdx  painter.mdx  svg.mdx
website/spheredoc/docs/audio/: _category_.json  daux.mdx  fft.mdx  midi.mdx
website/spheredoc/docs/components/: _category_.json  buttons.mdx  containers.mdx  data.mdx  sliders.mdx  specialized.mdx  text.mdx
website/spheredoc/docs/core/: _category_.json  animation.mdx  application.mdx  events.mdx  focus.mdx  font.mdx  resources.mdx  shortcuts.mdx  theme.mdx  window.mdx
website/spheredoc/docs/javascript/: _category_.json  engine.mdx  react.mdx  vue.mdx
website/spheredoc/docs/layout/: _category_.json  flex-node.mdx  layout-style.mdx
website/spheredoc/src/css/: custom.css
